<?xml version="1.0"?>
<package format="3">
  <name>diff_drive_control</name>
  <version>0.0.0</version>
  <description>
    Drive control kinematics for a differential drive robot
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
